// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateAppDeclarationFile errors should generate common errors in domain 1`] = `
"export declare namespace domain {
    namespace v_1_0_0 {
        class HamburgerError extends Error {
            constructor(message: string);
        }
        class CommonError extends Error {
            constructor(message: string);
        }
        class ArticleError extends Error {
            constructor(message: string);
        }
    }
}
export declare namespace hamburgerService {
    namespace v_1_0_0 {
        function getHamburger(): Promise<string>;
        function setHamburger(): Promise<string>;
    }
}
export declare namespace articleService {
    namespace v_1_0_0 {
        function getArticle(): Promise<string>;
        function setArticle(): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile errors should generate multi-service multi-error 1`] = `
"export declare namespace domain {
    namespace v_1_0_0 {
        class HamburgerError extends Error {
            constructor(message: string);
        }
        class ArticleError extends Error {
            constructor(message: string);
        }
    }
}
export declare namespace hamburgerService {
    namespace v_1_0_0 {
        function getHamburger(): Promise<string>;
    }
}
export declare namespace articleService {
    namespace v_1_0_0 {
        function getArticle(): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile errors should generate properties on generated error classes 1`] = `
"export declare namespace domain {
    namespace v_1_0_0 {
        class ArticleError extends Error {
            constructor(message: string, myPublicProp: number, myProp: number);
        }
    }
}
export declare namespace articleService {
    namespace v_1_0_0 {
        function getArticle(): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile errors should generate service error 1`] = `
"export declare namespace domain {
    namespace v_1_0_0 {
        class ArticleError extends Error {
            constructor(message: string);
        }
    }
}
export declare namespace articleService {
    namespace v_1_0_0 {
        function getArticle(): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile middleware should parse middleware 1`] = `
"export declare namespace domain {
    namespace v_1_0_0 {
        interface User {
            uid: string;
        }
    }
}
export declare namespace samen {
    type SamenContext<T> = T;
}
export declare namespace articleService {
    namespace v_1_0_0 {
        function getArticle(ctx: samen.SamenContext<{
            uid: string;
        }>, aap: string): Promise<string>;
    }
}
"
`;

exports[`generateAppDeclarationFile typeAliases type aliases to native array types 1`] = `
"export declare namespace domain {
    namespace v_1_0_0 {
        type AadReturnType1 = string[];
    }
}
export declare namespace articleService {
    namespace v_1_0_0 {
        function getArticle(): Promise<domain.v_1_0_0.AadReturnType1>;
    }
}
"
`;

exports[`generateAppDeclarationFile typeAliases type aliases to native types 1`] = `
"export declare namespace domain {
    namespace v_1_0_0 {
        type AadReturnType2 = boolean;
    }
}
export declare namespace articleService {
    namespace v_1_0_0 {
        function getArticle(): Promise<{
            aad: domain.v_1_0_0.AadReturnType2;
        }>;
    }
}
"
`;

exports[`generateAppDeclarationFile typeAliases type aliases which are aliases of aliases 1`] = `
"export declare namespace domain {
    namespace v_1_0_0 {
        type TypeReal = {
            x: number;
        };
        type TypeRef = domain.v_1_0_0.TypeReal;
        type Result = domain.v_1_0_0.TypeRef;
    }
}
export declare namespace workoutRoutineService {
    namespace v_1_0_0 {
        function getRoutine(versionId: string): Promise<domain.v_1_0_0.Result>;
    }
}
"
`;
